--- a/mesher.csproj
+++ b/mesher.csproj
@@ -80,6 +80,7 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\LineSegment.cs" />
     <Compile Include="Assets\Scripts\LineStream.cs" />
+    <Compile Include="Assets\Scripts\MeshBuilder.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
